anecdoct-rs/tui/src/chatwidget/snapshots/anecdoct_tui__chatwidget__tests__approvals_selection_popup@windows.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Update Model Permissions

› 1. Read Only (current)  Anecdoct can read files in the current workspace.
                          Approval is required to edit files or access the
                          internet.
  2. Default              Anecdoct can read and edit files in the current
                          workspace, and run commands. Approval is required to
                          access the internet or edit other files.
  3. Full Access          Anecdoct can edit files outside this workspace and
                          access the internet without asking for approval.
                          Exercise caution when using.

  Press enter to confirm or esc to go back
